--- a/SimpleMapTracker.csproj
+++ b/SimpleMapTracker.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0-windows</TargetFramework>
+        <TargetFramework>net9.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
@@ -8,7 +8,7 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-        <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
+        <DalamudLibPath>C:\ffxiv\repo\Dalamud\bin\Release\</DalamudLibPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <OutputPath>$(SolutionDir)/bin/$(Configuration)</OutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -16,7 +16,7 @@
         <ThisAssemblyNamespace>SimpleMapTracker</ThisAssemblyNamespace>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
         <GitVersion>false</GitVersion>
-        <PluginVersion>1.0.1</PluginVersion>
+        <PluginVersion>1.0.2</PluginVersion>
         <NoWarn>TA100</NoWarn> <!-- Fuck your SponsorLink. Don't shove warnings into my output. -->
     </PropertyGroup>
 
@@ -36,7 +36,7 @@
     </Target>
 
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="11.0.0"/>
+        <PackageReference Include="DalamudPackager" Version="12.0.0" />
         <PackageReference Include="Websocket.Client" Version="5.1.2"/>
         <Reference Include="Dalamud">
             <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
