--- a/src/SimpleMapTracker.csproj
+++ b/src/SimpleMapTracker.csproj
@@ -1,4 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
+    <PropertyGroup>
+        <UmbraLibPath>$([System.IO.Directory]::GetDirectories($(appdata)\XIVLauncher\installedPlugins\Umbra\)[0])\</UmbraLibPath>
+    </PropertyGroup>
+    
     <PropertyGroup>
         <TargetFramework>net9.0-windows</TargetFramework>
         <Platforms>x64</Platforms>
@@ -8,9 +13,8 @@
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-        <DalamudLibPath>C:\ffxiv\repo\Dalamud\bin\Release\</DalamudLibPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-        <OutputPath>$(SolutionDir)/bin/$(Configuration)</OutputPath>
+        <OutputPath>..\out\$(Configuration)\</OutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <!-- GitInfo generator -->
         <ThisAssemblyNamespace>SimpleMapTracker</ThisAssemblyNamespace>
@@ -36,43 +40,33 @@
     </Target>
 
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="13.0.0" />
         <PackageReference Include="Websocket.Client" Version="5.1.2"/>
-        <Reference Include="Dalamud">
-            <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
+        <Reference Include="Umbra">
+            <HintPath>$(UmbraLibPath)Umbra.dll</HintPath>
             <Private>false</Private>
         </Reference>
-        <Reference Include="FFXIVClientStructs">
-            <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+        <Reference Include="Umbra.Common">
+            <HintPath>$(UmbraLibPath)Umbra.Common.dll</HintPath>
             <Private>false</Private>
         </Reference>
-        <Reference Include="InteropGenerator.Runtime">
-            <HintPath>$(DalamudLibPath)\InteropGenerator.Runtime.dll</HintPath>
+        <Reference Include="Umbra.Game">
+            <HintPath>$(UmbraLibPath)Umbra.Game.dll</HintPath>
             <Private>false</Private>
         </Reference>
-        <Reference Include="Lumina">
-            <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Lumina.Excel">
-            <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Newtonsoft.Json">
-            <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Dalamud.Bindings.ImGui">
-            <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImGui.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Dalamud.Bindings.ImPlot">
-            <HintPath>$(DalamudLibPath)Dalamud.Bindings.ImPlot.dll</HintPath>
+        <Reference Include="Una.Drawing">
+            <HintPath>$(UmbraLibPath)Una.Drawing.dll</HintPath>
             <Private>false</Private>
         </Reference>
         <PackageReference Include="GitInfo" Version="3.5.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+    </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="src\packages.lock.json" />
+        <Content Include="src\SimpleMapTracker.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 </Project>
