--- a/src/UmbraMapTracker.csproj
+++ b/src/UmbraMapTracker.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Dalamud.NET.Sdk/13.0.0">
     <PropertyGroup>
         <UmbraLibPath>$([System.IO.Directory]::GetDirectories($(appdata)\XIVLauncher\installedPlugins\Umbra\)[0])\</UmbraLibPath>
+        <RootNamespace>SimpleMapTracker</RootNamespace>
     </PropertyGroup>
     
     <PropertyGroup>
@@ -17,7 +18,7 @@
         <OutputPath>..\out\$(Configuration)\</OutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <!-- GitInfo generator -->
-        <ThisAssemblyNamespace>SimpleMapTracker</ThisAssemblyNamespace>
+        <ThisAssemblyNamespace>UmbraMapTracker</ThisAssemblyNamespace>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
         <GitVersion>false</GitVersion>
         <PluginVersion>1.0.3</PluginVersion>
@@ -65,7 +66,7 @@
     
     <ItemGroup>
         <Content Include="src\packages.lock.json" />
-        <Content Include="src\SimpleMapTracker.json">
+        <Content Include="src\UmbraMapTracker.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
